--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
   <body>
     <div class="glass-panel">
-      <h1>AJAX</h1>
-      <p>Glassmorphism is achieved using transparency and background blur to get a frosted-glass like effect.</p>
+      <h1 style="font-size: 64px">AJAX</h1>
       <div class="glass-toolbar">
         <a href="tugas1.html"><button class="glass-button">Tugas 1</button></a>
         <a href="tugas2.html"><button class="glass-button">Tugas 2</button></a>
@@ -21,3 +20,4 @@
 
   <script></script>
 </html>
+
